Basic analysis for register promotion pass. Does nothing yet

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -309,6 +309,7 @@ set(HEADER_FILES
   Random.h
   RealizationOrder.h
   Reduction.h
+  RegisterPromotion.h
   RemoveDeadAllocations.h
   RemoveTrivialForLoops.h
   RemoveUndef.h
@@ -452,6 +453,7 @@ add_library(Halide ${HALIDE_LIBRARY_TYPE}
   Random.cpp
   RealizationOrder.cpp
   Reduction.cpp
+  RegisterPromotion.cpp
   RemoveDeadAllocations.cpp
   RemoveTrivialForLoops.cpp
   RemoveUndef.cpp
