--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -211,7 +211,7 @@ if (WITH_TEST_GENERATORS)
   add_test_generator(nested_externs)
   add_test_generator(pyramid)
   add_test_generator(stubtest WITH_STUB
-                     GENERATOR_NAME StubNS1::StubNS2::StubTest)
+                     GENERATOR_NAME stub_test)
   # the stubuser generator needs the stub from stubtest
   add_test_generator(stubuser
                      GENERATOR_NAME stubuser
@@ -293,7 +293,7 @@ if (WITH_TEST_GENERATORS)
       tuple_output.type=float32,float32
   )
   halide_define_aot_test(stubtest
-                         GENERATOR_NAME StubNS1::StubNS2::StubTest
+                         GENERATOR_NAME stub_test
                          GENERATOR_ARGS "${STUBTEST_GENERATOR_ARGS}")
 
   # Tests that require additional dependencies, args, etc
