--- a/test/error/BUILD
+++ b/test/error/BUILD
@@ -9,5 +9,8 @@ load("@halide//test/common:cc_failure_test.bzl", "cc_failure_test")
     # here. https://github.com/halide/Halide/issues/1565
     copts = halide_language_copts() + ["-UNDEBUG"],
     linkopts = halide_language_linkopts(),
-    deps = ["@halide//:language"],
+    deps = ["@halide//:language"] + [
+        # These are really only needed for a few tests, but easier (& harmless) to include in all of them
+        "//test/common:halide_test_dirs",  # TODO add @halide when https://github.com/bazelbuild/bazel/issues/1248 is fixed
+    ],
 ) for test in glob(["*.cpp"])]
