--- a/test/opengl/BUILD
+++ b/test/opengl/BUILD
@@ -2,12 +2,18 @@ load("@halide//:halide.bzl", "halide_language_copts", "halide_language_linkopts"
 
 [cc_test(
     name = test[0:-4],
-    srcs = [test, "testing.h"],
-    copts = halide_language_copts() + ["-UNDEBUG", "-fexceptions"],
+    srcs = [
+        test,
+        "testing.h",
+    ],
+    copts = halide_language_copts() + [
+        "-UNDEBUG",
+        "-fexceptions",
+    ],
     linkopts = halide_language_linkopts() + halide_opengl_linkopts(),
     deps = [
-        "@halide//:language",
         "//:mini_opengl",  # TODO add @halide when https://github.com/bazelbuild/bazel/issues/1248 is fixed
+        "@halide//:language",
     ],
 ) for test in glob(
     ["*.cpp"],
@@ -20,7 +26,7 @@ cc_test(
     copts = halide_language_copts() + ["-UNDEBUG"],
     linkopts = halide_language_linkopts() + halide_opengl_linkopts(),
     deps = [
-        "@halide//:language",
         "//:internal_test_includes",  # TODO add @halide when https://github.com/bazelbuild/bazel/issues/1248 is fixed
+        "@halide//:language",
     ],
 )
